tester/src/test/aya/failure/patterns/confl-cond.aya.txt
In file $FILE:6:3 ->

  4 | open data Int : Set
  5 |  | pos Nat
  6 |  | neg Nat {
  7 |    | suc a => pos (suc a)
           ^------------------^ substituted to `pos (suc zero)`
  8 |    | suc zero => pos zero
           ^------------------^ substituted to `pos zero`
  
Error: The 1st and the 2nd clauses are not confluent because we failed to unify `pos (suc zero)` and `pos zero`
Tycking interrupted due to error(s).
What are you doing?
